--- a/css/fansite3.css
+++ b/css/fansite3.css
@@ -1,23 +1,19 @@
 
 body {background-color: #0a0415;
-    font-family: Arial, Helvetica, sans-serif; }
+    font-family: Arial, Helvetica, sans-serif; 
+   color: white;}
 
-    nav {
+     nav {
         background-color: #cb1717;
         padding: 20px;
         display: flex;
-        font-family: "Exo 2";
      }
-    nav a {
+     nav a {
         color:#02021f;
-    }
-    nav a:hover {
-        opacity: 0.5;}
+     }
+     nav a:hover {opacity: 0.5;}
     
-    .navmenu{
-        display: flex;
-        flex-direction: row;
-        gap: 20px;
-    }
     
 .sizeimg img {width: 500px;}
+
+ main div { margin-bottom: 150px;}
