--- a/css/fansite1.css
+++ b/css/fansite1.css
@@ -1,7 +1,12 @@
 body {background-color: #0a0415;
     overflow-x: scroll;
     font-family: Arial, Helvetica, sans-serif; }
-h1 {color: #cb1717;}
+h1 {
+       color: #cb1717;
+       text-shadow:1px 1px 2px red, 0 0 1em red, 0 0 0.2em red;
+       text-align: center;
+       font-size: 50px;
+       padding-top: 30px;}
 
  /* MODIFICATIONS DES TEXTES */
 .centretxt {
@@ -14,6 +19,7 @@ h1 {color: #cb1717;}
       color:#cb1717;
       text-decoration:double;
       font-size: larger;
+      text-shadow:1px 1px 2px red, 0 0 1em red, 0 0 0.2em red;
 }
 
 
