--- a/css/fansite3.css
+++ b/css/fansite3.css
@@ -3,6 +3,8 @@ body {background-color: #0a0415;
     font-family: Arial, Helvetica, sans-serif; 
    color: white;}
 
+h1 { text-shadow:1px 1px 2px red, 0 0 1em red, 0 0 0.2em red;}
+
      nav {
         background-color: #cb1717;
         padding: 20px;
